infra/configs/base/longhorn/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  hostnames:
    - longhorn.uclab.dev # Specify a valid domain to reach your application
  parentRefs:
    - name: uclab-gateway
      namespace: gateway-system
  rules:
    - backendRefs:
        - name: longhorn-frontend # Specify the service of the application
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
status:
  parents: []
